--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  go_router: ^14.3.0
   google_fonts: ^6.2.1
   font_awesome_flutter: ^10.7.0
   get: ^4.6.6
